tests/bad/no_return_regular.oc
/// fail: Function does not always return

def foo(): i32 {
	print("Hello, World!")
}